--- a/cmd/composer.json
+++ b/cmd/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
-        "symfony/console": "~2.6"
+        "symfony/console": "~2.6",
+        "symfony/process": "~2.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Woger\\": "src"
+        }
     }
 }
